tests/should_fail/ghost/create_in_program.rs
extern crate creusot_contracts;
use creusot_contracts::*;

pub fn create_ghost_in_program() {
    let _g = GhostBox::new(1);
}
